Fix UI buttons in controlbar being shifted up

--- a/samples/dash-if-reference-player/app/css/main.css
+++ b/samples/dash-if-reference-player/app/css/main.css
@@ -154,8 +154,6 @@ a:hover {
 .dash-video-player {
     background-color: #000000;
     position: relative;
-    margin: 0 auto;
-    line-height: 1.0;
 }
 
 .col-md-9 video {
